--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ enviroment:
   - nodejs_version: "6"
 
 
-initial:
+install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
 
@@ -15,4 +15,4 @@ test_script:
   - npm test
 
 
-  buidl: off
+  build: off
